# nullius

./: .gitignore  AGENTS.md  DESIGN.md  LICENSE  PRODUCT.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml
action/: README.md  action.yml  summary.mjs
apps/desktop/: index.html  package.json  tsconfig.json
apps/desktop/src/: main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/theme/: tokens.css
docs/: index.html  verify-contract.md
docs/paper/: nullius.tex
docs/paper/evaluation/: README.md  codex-alone-audit-verify.json  codex-alone-final-message.txt  codex-alone-report.md  codex-cli-events.jsonl  codex-cli-regression-results.csv  codex-cli-report.md  codex-cli-run.txt  codex-cli-script-output.txt  codex-complex-alone-analysis_results.json  codex-complex-alone-analyze_ols.py  codex-complex-alone-audit-verify.json  codex-complex-alone-final-message.txt  codex-complex-alone-model_coefficients.csv  codex-complex-alone-report.md  codex-complex-cli-gate-metrics.csv  codex-complex-cli-report.md  codex-complex-cli-script-output.txt  codex-complex-cli-verify.json  codex-complex-run.txt  codex-complex-truth-metrics.csv  codex-complex-truth.json  fabricated-run.txt  generate-dataset.py  measurements.csv  mock-run.txt  raw-audit.txt  raw-baseline.md  real-run.txt
script/: build_and_run.sh
