[package]
name = "nullius"
version = "0.1.0"
description = "Evidence-gated AI research workspace"
authors = ["Nullius"]
edition = "2021"

[lib]
name = "nullius_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

